syntax = "proto3";

package proto;

message Status {
    bool success = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message LogoutRequest {
    string token = 1;
}

message CreateRequest {
    string username = 1;
    string password = 2;
    string name = 3;
    string email = 4;
}

message UpdateRequest {
    string token = 1;
    string name = 2;
    string email = 3;
    string avatar = 4;
    string password = 5;
}

message ShowRequest {
    string token = 1;
}

message ShowResponse {
    string name = 1;
    string email = 2;
    string avatar = 3;
    int64 diamond = 4;
}

// Define Account Service
service AccountService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (Status);
    rpc Create(CreateRequest) returns (Status);
    rpc Update(UpdateRequest) returns (Status);
    rpc Show(ShowRequest) returns (ShowResponse);
}
